--- a/style/css/style.css
+++ b/style/css/style.css
@@ -39,16 +39,17 @@ a {
   text-decoration: none;
 }
 
-#contact {
+.contact__btn {
   border: 2px solid #fff;
   border-radius: 24px;
   padding: 9px 32px;
   color: #fff;
   background-color: transparent;
   font: normal 600 1.8rem/2.8rem "Livvic";
+  cursor: pointer;
 }
 
-#navbar {
+.navbar {
   position: fixed;
   top: 0;
   left: 0;
@@ -57,19 +58,20 @@ a {
   z-index: 1000;
   background-color: #014e56;
   padding: 73px 0 20px;
+  transition: 0.5s;
 }
-#navbar .container {
+.navbar .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-#navbar .navbar__logo {
+.navbar .navbar__logo {
   width: 160px;
 }
-#navbar .navbar__logo img {
+.navbar .navbar__logo img {
   width: 100%;
 }
-#navbar .navbar__menus {
+.navbar .navbar__menus {
   width: 85%;
   display: flex;
   flex-direction: row;
@@ -77,14 +79,27 @@ a {
   justify-content: space-between;
   margin-left: 80px;
 }
-#navbar .navbar__menus .navbar__list .navbar__link {
+.navbar .navbar__menus .navbar__list .navbar__link {
   display: inline-block;
   margin: 0 20px;
   color: #fff;
   font: normal 600 1.8rem/2.8rem "Livvic";
 }
-#navbar .toggle-btn {
+.navbar .navbar__menus .navbar__list .navbar__link:hover {
+  color: #f67e7e;
+}
+.navbar .toggle-btn {
   display: none;
+}
+.navbar .contact__btn:hover {
+  color: #014e56;
+  background-color: #fff;
+}
+
+header .navbar-shrink {
+  padding: 60px 0 15px;
+  box-shadow: -2px 14px 8px 0px rgba(219, 219, 219, 0.2);
+  background-color: #002529;
 }
 
 @media (max-width: 590px) {
@@ -141,8 +156,10 @@ a {
 }
 .footer .container {
   display: flex;
-  flex-direction: row;
+  text-align: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: row;
   justify-content: space-between;
 }
 .footer__nav {
@@ -165,10 +182,16 @@ a {
 .footer__link:first-child {
   margin-left: 0;
 }
+.footer__link:hover {
+  color: #f67e7e;
+}
 .footer__left {
   display: flex;
-  flex-direction: row;
+  text-align: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  text-align: left;
   justify-content: space-between;
 }
 .footer__location p {
@@ -198,6 +221,12 @@ a {
     flex-direction: column;
   }
   .footer__left {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     width: 100%;
   }
   .footer__location p {
@@ -211,10 +240,11 @@ a {
 }
 @media (max-width: 590px) {
   .footer__left {
-    flex-direction: column;
+    display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    flex-direction: column;
   }
   .footer__nav {
     margin-right: 0;
@@ -234,9 +264,11 @@ a {
     text-align: center;
   }
   .footer__social {
-    flex-direction: column;
+    display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
   }
   .footer__social p {
     margin-top: 16px;
@@ -453,10 +485,14 @@ a {
   color: #012f34;
   line-height: 38px;
 }
-.start #contact {
+.start .contact__btn {
   background-color: transparent;
   border-color: #012f34;
   color: #012f34;
+}
+.start .contact__btn:hover {
+  background-color: #002529;
+  color: #fff;
 }
 
 @media (max-width: 1330px) {
@@ -499,19 +535,19 @@ a {
   }
   .home .container {
     text-align: center;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
   }
   .home .container:last-child {
     justify-content: end;
   }
   .home__container {
-    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
     align-items: end;
-    text-align: center;
-    justify-content: center;
     height: 256px;
     padding-bottom: 0;
   }
@@ -588,9 +624,10 @@ a {
     text-align: center;
   }
   .success .content__text {
-    display: flex;
-    flex-direction: column;
+    text-align: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   .success .content p {
     width: 74%;
@@ -605,9 +642,9 @@ a {
   }
   .home .container {
     text-align: center;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
   }
   .home__container {
     padding-bottom: 197px;
@@ -658,9 +695,10 @@ a {
   }
   .build__row {
     width: 100%;
-    flex-direction: column;
-    justify-content: center;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     margin-bottom: 48px;
   }
   .build__row p {
@@ -681,14 +719,427 @@ a {
     width: 90%;
   }
   .start .container {
-    flex-direction: column;
-    justify-content: center;
+    text-align: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   .start__title {
     text-align: center;
     width: 80%;
     margin-bottom: 24px;
+  }
+}
+.about {
+  position: relative;
+  padding: 177px 0 108px;
+  background-color: #014e56;
+}
+.about .container {
+  display: flex;
+  width: 100%;
+  padding: 0 24px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.about__title {
+  font: normal 700 4.8rem "Livvic";
+  color: #fff;
+  font-size: 40px;
+  line-height: 40px;
+  margin-bottom: 16px;
+}
+.about__content {
+  font: normal 600 1.5rem/2.5rem "Livvic";
+  color: #fff;
+}
+.about__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.directors {
+  position: relative;
+  padding: 100px 0 116px;
+  background-color: #004047;
+}
+.directors .container {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.directors__img--top {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.directors__img--bottom {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.directors__title {
+  font: normal 600 1.8rem/2.8rem "Livvic";
+  font-size: 32px;
+  line-height: 32px;
+  margin-bottom: 48px;
+  color: #fff;
+}
+.directors__row {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 39px;
+}
+.directors__card {
+  position: relative;
+  background-color: #012f34;
+  padding: 32px 45px 56px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.directors__card h5 {
+  margin-top: 16px;
+  font: normal 600 1.8rem/2.8rem "Livvic";
+  color: #79c8c7;
+}
+.directors__card p {
+  font: normal 600 1.5rem/2.5rem "Livvic";
+  color: #fff;
+}
+.directors__card .directors__about {
+  display: none;
+}
+.directors__card .directors__about p {
+  margin-bottom: 24px;
+}
+.directors__card a {
+  position: absolute;
+  bottom: -28px;
+  border: none;
+  background-color: transparent;
+}
+.directors__card:hover .directors__about {
+  display: block;
+}
+.directors__card:hover {
+  background-color: #002529;
+}
+.directors__card:hover .card__img {
+  display: none;
+}
+.directors__card:hover .card__text {
+  display: none;
+}
+.directors__card:hover a img {
+  content: url("../../../images/about-img/x-icon.svg");
+}
+
+.clients {
+  position: relative;
+  text-align: center;
+  padding: 88px 0;
+  background-color: #012f34;
+}
+.clients .container {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.clients__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.clients__title {
+  font: normal 600 1.8rem/2.8rem "Livvic";
+  font-size: 32px;
+  line-height: 32px;
+  color: #fff;
+  margin-bottom: 64px;
+}
+.clients__row {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 57px;
+  text-align: center;
+}
+.clients__row img {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .about {
+    padding: 224px 0 112px;
+  }
+  .about__title {
+    font-size: 64px;
+    line-height: 56px;
+  }
+  .about__content {
+    width: 487px;
+  }
+  .about__img {
+    content: url("../../../images/about-img/about-right-2.svg");
+  }
+  .directors__row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 39px;
+  }
+  .clients {
+    padding: 100px 0;
+  }
+  .clients__img {
+    content: url("../../../images/about-img/clients-bg-3.svg");
+  }
+  .clients__row {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 40px;
+  }
+  .clients__row img {
+    width: 103px;
+    height: 17px;
+  }
+}
+@media (min-width: 1024px) {
+  .about .container {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    text-align: left;
+  }
+  .about__content {
+    width: 90%;
+    font: normal 600 1.8rem/2.8rem "Livvic";
+  }
+  .directors {
+    padding: 140px 0 168px;
+  }
+  .directors__row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 39px;
+  }
+  .clients {
+    padding: 140px 0;
+  }
+  .clients__img {
+    content: url("../../../images/about-img/clients-bg.svg");
+  }
+  .clients__row {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 80px;
+  }
+  .clients__row img {
+    width: 165px;
+    height: 28px;
+  }
+}
+.contact {
+  position: relative;
+  text-align: center;
+  padding: 160px 0 88px;
+  background-color: #014e56;
+}
+.contact .container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px;
+}
+.contact__top {
+  display: none;
+}
+.contact__bottom {
+  content: url(../../../images/contact-img/contact-bottom-2.svg);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.contact__column {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 24px;
+}
+.contact__column h2 {
+  font: normal 700 4.8rem "Livvic";
+  font-size: 40px;
+  line-height: 40px;
+  color: #fff;
+}
+.contact__column p {
+  font: normal 700 4.8rem "Livvic";
+  font-size: 40px;
+  line-height: 32px;
+  color: #f67e7e;
+  margin-bottom: 40px;
+}
+.contact__features {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+.contact__features img {
+  margin-left: 16px;
+}
+.contact__features p {
+  text-align: left;
+  width: 80%;
+  margin-left: 23px;
+  font: normal 600 1.8rem/2.8rem "Livvic";
+  color: #fff;
+}
+.contact__form {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 5px;
+}
+.contact__input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #fff;
+  font: normal 600 1.5rem/2.5rem "Livvic";
+  color: #fff;
+  padding: 24px 20px;
+}
+.contact__input::placeholder {
+  color: #fff;
+  opacity: 0.5;
+}
+.contact__message {
+  width: 100%;
+  height: 107px;
+  resize: none;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #fff;
+  font: normal 600 1.5rem/2.5rem "Livvic";
+  color: #fff;
+  padding: 24px 20px;
+}
+.contact__message::placeholder {
+  color: #fff;
+  opacity: 0.5;
+}
+.contact__input:focus, .contact__message:focus {
+  border-color: #f67e7e;
+}
+.contact .contact__btn {
+  margin-top: 24px;
+  width: 123px;
+  background-color: #fff;
+  color: #014e56;
+}
+
+@media (min-width: 768px) {
+  .contact {
+    padding-top: 216px 0 112px;
+  }
+  .contact .container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .contact__top {
+    display: block;
+    position: absolute;
+    top: 216px;
+    left: 0;
+  }
+  .contact__bottom {
+    content: url(../../../images/contact-img/contact-bottom.svg);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  .contact__column {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .contact__column h2 {
+    font-size: 64px;
+    line-height: 56px;
+  }
+  .contact__features {
+    width: 515px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: start;
+  }
+  .contact__features img {
+    margin-left: 0;
+  }
+  .contact__features p {
+    width: 100%;
+  }
+  .contact__form {
+    width: 515px;
+  }
+  .contact__input, .contact__message {
+    width: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  .contact {
+    padding-top: 245px;
+  }
+  .contact .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+  .contact__top {
+    display: none;
+    top: 245px;
+  }
+  .contact__bottom {
+    display: none;
+  }
+  .contact__column {
+    align-items: start;
+    text-align: left;
+  }
+  .contact__column h2 {
+    font-size: 64px;
+    line-height: 100px;
+    margin-bottom: 16px;
+  }
+  .contact__column p {
+    font-size: 32px;
+    line-height: 48px;
+    margin-bottom: 32px;
+  }
+  .contact__features p {
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
+@media (min-width: 1340px) {
+  .contact__top {
+    display: block;
+    top: 245px;
+  }
+  .contact__bottom {
+    display: block;
   }
 }
 
